# ComfyUI_VNCCS_Utils

./: CHANGELOG.md  CLAUDE.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
api/: pose_library.py
docs/: MODEL_MANAGER_GUIDE.md  MODEL_SELECTOR_USAGE.md  VNCCS_POSE_STUDIO_USAGE.md
nodes/: pose_studio.py  vnccs_model_manager.py  vnccs_nodes.py
vnccs_sam3d/: preset_pack.py
vnccs_sam3d/processing/: birefnet_mask.py  process.py
vnccs_sam3d/sam_3d_body/data/utils/: io.py
vnccs_sam3d/sam_3d_body/models/backbones/dinov3_repo/dinov3/distributed/: torch_distributed_wrapper.py
vnccs_sam3d/sam_3d_body/models/backbones/dinov3_repo/dinov3/eval/text/: tokenizer.py
vnccs_sam3d/sam_3d_body/models/backbones/dinov3_repo/dinov3/utils/: cluster.py  utils.py
vnccs_sam3d/sam_3d_body/models/heads/: mhr_head.py
vnccs_sam3d/sam_3d_body/models/modules/: mhr_utils.py
vnccs_sam3d/sam_3d_body/visualization/: renderer.py
web/: TransformControls.js  three.module.js  vnccs_camera_control.js  vnccs_model_manager.js  vnccs_pose_morph_worker.js  vnccs_pose_studio.js  vnccs_pose_studio_core.js
